test/fail/use-before-define.mo
import Prim "mo:prim";

func f():Int = x;
let y = f();
let x = 1;
Prim.debugPrintInt(x);
